# MenuGenie

./: Cargo.toml  LICENCE  README.md
examples/: simple.rs
src/: action.rs  builder.rs  error.rs  lib.rs  menu.rs  menu_item.rs
